# UAV-Project-Bee-Simulations

./: README.md
bee/: CMakeLists.txt  package.xml  setup.py  task.txt
bee/CameraWebServer_OV5640AF/: CameraWebServer_OV5640AF.ino
bee/launch/: bee.launch.py  display_rviz.launch.py  sfm_scan.launch.py
bee/meshes/: drone_base.dae
bee/rviz/: urdf.rviz
bee/scripts/: Control_doc.md  README.md  control9.py  control_arduino.py  sfm_core.py  sfm_logger.py
bee/scripts/Depth-Anything-V2/: 3D_perception.py  3dpoints.py  README.md  analysis.py  cam_test.py  depth+odom.py  espcamtest.py  maping.py  maping2.py  maping3.py  maping4.py  maping5.py  maping6(stable perception).py  maping7.py  maping8(temporal odometry).py  maping9.py  rt_3D.py  rt_3D2.py  stream.py  stream2.py  stream3,py  vlsam1.py
bee/scripts/control trials/: control2.py  control3(stable).py  control4.py  control5test.py  control6.py  control7.py  control8.py  flight_controller.py
bee/scripts/paper_follow/: essitaila_matrix.py  sfm1.py  sfm5(with_camera_matrix).py
bee/scripts/ray based approach/: sfm(rotation_matrix).py  sfm.py  sfm10(xyto_rotations).py  sfm11(xy2rot2plot).py  sfm12(2frameviz_converge).py  sfm13(triangulation).py  sfm14(compiled_bt_error).py  sfm15().py  sfm16_finalpy_pipeline.py  sfm2.py  sfm3(testing_tracking).py  sfm4(img with feature noise).py  sfm5(with_camera_matrix).py  sfm6(img with ori).py  sfm7(viz_2_frames).py  sfm8(principle_ray).py  sfm9(ray_plotter).py  test.py
bee/src/: drone.cpp  sfm_logger.py
bee/urdf/: F1race.urdf  bee.urdf  drone.urdf
bee/worlds/: ackermann_steering.sdf  camera_move.py  empty.sdf  empty_world.sdf  lift_drag_battery.sdf
(+17 files in other folders)
